feat: upgrade user to premium
