# app/routes/userRouter.js
@@ -4,7 +4,7 @@ const multer = require("multer");
 const router = express.Router();
 const upload = multer();
 
-const { getUser, patchUser, deleteUser } = require("../controllers/userController");
+const { getUser, patchUser, deleteUser, upgradeUser } = require("../controllers/userController");
 const { getScans, postScans } = require("../controllers/scansController");
 const authMiddleware = require("../middlewares/authMiddleware");
 const pointsMiddleware = require("../middlewares/pointsMiddleware");
@@ -21,5 +21,7 @@ router
 	.route("/:userId/scans")
 	.get(authMiddleware, getScans)
 	.post(authMiddleware, pointsMiddleware, upload.single("image"), postScans);
+
+router.route("/:userId/upgrade").patch(authMiddleware, upgradeUser);
 
 module.exports = router;
